chore: Java modernization – replace String.format() with .formatted()
Change-Id: I3d0ebc8996ce0728de14f41b86ad4341fdf4e7e2