@@ -88,7 +88,7 @@ public class StringLengthValueSet implements ValueSet<String> {
 
     @Override
     public String toString() {
-        return String.format("String length ≤ %1$s", getMaximumLength());
+        return "String length ≤ %1$s".formatted(getMaximumLength());
     }
 
     @Override
